# jedit

./: Cargo.toml  README.md
src/: main.rs
src/command/: command_manager.rs  commands.rs  mod.rs
src/document/: file_io.rs  mod.rs  text_document.rs
src/ui/: editor_view.rs  main_window.rs  mod.rs
