[package]
name = "jedit"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_Controls", # Added for dialogs
    "Win32_UI_Controls_Dialogs", # Added for dialog functionality
] }
